<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sutureexpress.dc.supplymanagement.CurrentBoxCount"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include
        android:id="@+id/current_box_count_appBar"
        layout="@layout/app_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/preview_email_info_msg"
            style="@style/ComfyFontSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:background="@color/colorHighlight54"
            android:padding="12dp"
            android:text="@string/preview_email_info"
            android:textStyle="bold" />

        <Button
            android:id="@+id/emailSendBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary26"
            android:drawableEnd="@drawable/ic_send_blue_500_24dp"
            android:elevation="12dp"
            android:onClick="sendBoxCountEmail"
            android:padding="12dp"
            android:text="@string/box_email_send" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dip"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="12dp"
            style="@style/ComfyFontSmall"
            android:layout_height="wrap_content"
            android:text="To:"/>


        <TextView
            android:id="@+id/recipient"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="12dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/taylor_gmail_primary" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary54" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="12dp"
            style="@style/ComfyFontSmall"
            android:layout_height="wrap_content"
            android:text="Subject:"/>


        <TextView
            android:id="@+id/subject"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="12dp"
            android:ems="10"
            android:text="" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary54" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/body_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:padding="12dp"
            style="@style/ComfyFontSmall"
            android:text="Body:"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAlignment="center"
            android:padding="12dp"
            android:text="See Below ..."
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/email_body_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text=""/>



        </LinearLayout>

    </ScrollView>

</LinearLayout>
